# MiniCode-rs

./: Cargo.toml  README.en.md  README.md  README.zh-CN.md  TODO.md
.github/workflows/: merge_feature.yml
apps/minicode/: Cargo.toml
apps/minicode/src/: agent_loop.rs  anthropic_adapter.rs  background_tasks.rs  cli.rs  cli_commands.rs  file_review.rs  history.rs  install.rs  local_tool_shortcuts.rs  main.rs  manage_cli.rs  mcp.rs  mock_model.rs  permissions.rs  prompt.rs  skills.rs  tool.rs  tools.rs  tui.rs  workspace.rs
apps/minicode/src/cli/: handlers.rs  mod.rs
crates/minicode-agent-core/: Cargo.toml
crates/minicode-agent-core/src/: agent_loop.rs  anthropic_adapter.rs  compact.rs  lib.rs
crates/minicode-background-tasks/: Cargo.toml
crates/minicode-background-tasks/src/: lib.rs
crates/minicode-cli-commands/: Cargo.toml
crates/minicode-cli-commands/src/: lib.rs
crates/minicode-config/: Cargo.toml
crates/minicode-config/src/: lib.rs  path.rs  runtime.rs
crates/minicode-core/: Cargo.toml
crates/minicode-core/src/: lib.rs
crates/minicode-file-review/: Cargo.toml
crates/minicode-history/: Cargo.toml
crates/minicode-history/src/: input_history.rs  lib.rs  messages.rs  meta.rs  models.rs  persistence.rs  query.rs  recovery.rs  runtime_state.rs  token_estimate.rs
crates/minicode-install/: Cargo.toml
crates/minicode-install/src/: lib.rs
crates/minicode-manage/: Cargo.toml
crates/minicode-manage/src/: lib.rs
crates/minicode-mcp/: Cargo.toml
crates/minicode-mcp/src/: bootstrap.rs  client.rs  content_length_transport.rs  lib.rs  logging.rs  mcp_tools.rs  newline_json_transport.rs  streamable_http_transport.rs
crates/minicode-mock-model/: Cargo.toml
crates/minicode-mock-model/src/: adapter.rs  commands.rs  helpers.rs  lib.rs
crates/minicode-permissions/: Cargo.toml
crates/minicode-permissions/src/: lib.rs  manager.rs  path_utils.rs  rules.rs  store.rs  types.rs
crates/minicode-prompt/: Cargo.toml
crates/minicode-prompt/src/: lib.rs
crates/minicode-skills/: Cargo.toml
crates/minicode-skills/src/: lib.rs
crates/minicode-tool/: Cargo.toml
crates/minicode-tool/src/: lib.rs
crates/minicode-tools-runtime/: Cargo.toml
crates/minicode-tools-runtime/src/: lib.rs
crates/minicode-tools-runtime/src/act/: ask_user.rs  skill.rs
crates/minicode-tools-runtime/src/command/: run_command.rs
crates/minicode-tools-runtime/src/file/: edit_file.rs  grep_file.rs  list_file.rs  mod.rs  patch_file.rs  read_file.rs  write_like.rs
crates/minicode-tools-runtime/src/web/: mod.rs  web_fetch.rs  web_search.rs
crates/minicode-tui/: Cargo.toml
crates/minicode-tui/src/: input.rs  lib.rs  state.rs  theme.rs  turn.rs
crates/minicode-tui/src/render/: approval.rs  ask_user.rs  header.rs  markdown.rs  mod.rs  transcript.rs  ui_utils.rs
crates/minicode-tui/src/turn/: approval.rs  ask_user.rs  busy_input.rs  event_apply.rs  mod.rs  prompt_handler.rs
crates/minicode-types/: Cargo.toml
crates/minicode-types/src/: lib.rs
crates/minicode-workspace/: Cargo.toml
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CODE_EXAMPLES.md  INDEX.md  MCP_TOOL_EXPLORATION.md  MULTI_IMPL.md  MULTI_IMPL.zh-CN.md  QUICK_REFERENCE.md  analysis_html_text_processing.md  quick_reference_utilities.md
