[package]
name = "minicode"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
minicode-core = { path = "../../crates/minicode-core" }

serde_json = "1"

[lints]
workspace = true
