[package]
name = "minicode-file-review"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
minicode-tool = { workspace = true }
similar = { workspace = true }

[lints]
workspace = true
