[package]
name = "minicode-manage"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
minicode-skills = { path = "../minicode-skills" }
serde_json = "1"
minicode-config = { workspace = true }

[lints]
workspace = true
