[package]
name = "minicode-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
minicode-tool = { workspace = true }
minicode-config = { workspace = true }
minicode-prompt = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "time"] }

[lints]
workspace = true
