[package]
name = "minicode-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
minicode-tool = { workspace = true }
minicode-types = { workspace = true }
minicode-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "sync", "time", "process"] }
rmcp = { workspace = true }
http = { workspace = true }

[lints]
workspace = true
