[package]
name = "minicode-prompt"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
dirs = { workspace = true }
minicode-config = { workspace = true }
minicode-permissions = { workspace = true }
minicode-tool = { workspace = true }

[lints]
workspace = true
