[package]
name = "minicode-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
async-trait = "0.1"
futures = "0.3"
jsonschema = "0.18"
minicode-permissions = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
minicode-prompt = { workspace = true }

[lints]
workspace = true
