[package]
name = "minicode-tools-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
minicode-background-tasks = { workspace = true }
minicode-config = { workspace = true }
minicode-file-review = { workspace = true }
minicode-mcp = { workspace = true }
minicode-permissions = { workspace = true }
minicode-skills = { workspace = true }
minicode-tool = { workspace = true }
minicode-workspace = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
tokio = { version = "1", features = ["process", "rt", "time"] }

[lints]
workspace = true
